# clamito

./: README.md  prompt_for_copilot.md  pyproject.toml  setup.py
clamito/: __init__.py  __main__.py  code_executor.py  code_generator.py  config.py  task_parser.py
tests/: test_clamito.py
