[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "clamito"
version = "0.1.0"
description = "An AI-driven climate data analysis package."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "openai",
    "xarray",
    "numpy"
]
readme = "README.md"
homepage = "https://github.com/yourusername/clamito"
repository = "https://github.com/yourusername/clamito"
keywords = ["climate", "data analysis", "AI", "openai"]